--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/webbydon29/galvan-deploy.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Don",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/webbydon29/galvan-deploy/issues"
